# rig

./: README.md
Rig/: .cproject  .project  BS.txt  CMakeLists.txt
Rig/include/: BS.txt  CMakeLists.txt  rig_config_in.h  rig_in.h  rig_internal.h
Rig/include/sys/: system_all.h  system_cc.h  system_cpu.h  system_libc.h  system_os.h
Rig/src/: BS.txt  CMakeLists.txt  rig_counter.c  rig_hash.c  rig_list.c  rig_mem.c  rig_misc.c  rig_queue.c  rig_smr_epoch.c  rig_smr_hp.c  rig_stack.c  rig_threads.c
Rig/src/hashes/: fnv.c  hsieh.c  jenkins.c  murmur2.c  murmur3.c
Rig/src/support/: array_stack.c
Rig/src/thread_ops/: rig_pthreads.c  rig_win32_threads.c
Rig/tests/: CMakeLists.txt  test_rig_counter.c  test_rig_hash.c  test_rig_list.c  tests.h
articles/: list_benchmark.c  list_llist_lock.c  list_llist_lock_unbounded.c  list_llist_lockfree.c  list_llist_lockfree_smr.c  lockfree_world.lyx  queue_benchmark.c  queue_llist_lock.c  queue_llist_lockfree.c  queue_llist_lockfree_smr.c  smr.h  stack_benchmark.c  stack_llist_lock.c  stack_llist_lockfree.c  stack_llist_lockfree_smr.c
modules/rig_laio/: blocking_syscalls.h
modules/rig_str/: rig_str.c  rig_str.h
modules/rig_str/str_ops/: str_ops.c  str_ops_search.c  str_ops_utf8.c
modules/rig_str/str_ops/utf8/: utf8.h  utf8_lower_upper.h
utils/benchmarks/: Makefile  commonbench.h  rstrchrbench.c  rstrstrbench.c  strchrbench.c  stringdb.h  strlenbench.c  strstrbench.c
utils/examples/: alignment_test.c  full_rwlock.c  hash_benchmark.c  memcpy_benchmark.c  parser.c  rig_array.c  rig_list_lforig.c  rig_list_lock.c  rig_rwlock.c  stack_iterator.c
utils/filebench/: Makefile  file_search_benchmark.c  genpatterns.c  patterns.h  random1k_search_benchmark.c
utils/init_tls_tests/: Makefile  const_dest_lib.c  lib_user_loadtime.c  lib_user_runtime.c  thread_tid.c  thread_tls.c
utils/lockfreebench/: Makefile  commonbench.h  list_benchmark.c  list_benchmark_randp.c  queue_benchmark.c  queue_benchmark_randp.c  stack_benchmark.c  stack_benchmark_randp.c
utils/unicode/: search_tables.c  size.c  unicode-to-utf8.c  unidata-extractors
utils/unicode/tables/: utf8_casefold.h  utf8_upper_lower.h
